# rsomics-anosim

./: Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  dm.rs  fmt.rs  lib.rs  rng.rs
tests/: compat.rs  oracle_skbio.py
tests/golden/: asym_dm.tsv  doc_dm.tsv  doc_groups.tsv  dup_dm.tsv  expected_R.tsv  hollow_dm.tsv  med_dm.tsv  med_groups.tsv  nan_dm.tsv  tie_dm.tsv  tie_groups.tsv
